mon: mark manager beacons as no_reply

We never reply to manager beacons, and we have to mark them
that way or else forwarded messages pile up pending replies
and things eventually block.

Fixes: http://tracker.ceph.com/issues/22114
Reported-by: Hongpeng Lu <ludehp@163.com>

Signed-off-by: Greg Farnum <gfarnum@redhat.com>
(cherry picked from commit 57ecc1ef1c1d4df973517c71ba02e5d1a16fb9c1)